NCL-9588 Complete restructure removing old json package